[package]
name = "radixal"
version = "0.1.0"
edition = "2018"
authors = ["Olivier Chassé St-Laurent <oliviercsl@gmail.com>"]
description = "Digits iteration for unsigned integer types."
documentation = "https://docs.rs/radixal"
homepage = "https://github.com/ocstl/radixal"
keywords = ["base", "digits", "radix"]
categories = ["no-std"]
license = "MIT"
repository = "https://github.com/ocstl/radixal"
readme = "README.md"

[dependencies]
num-traits = "0.2.8"

[features]
default = ["std"]

# Allows to add some provided methods relying on collections from the
# standard library.
std = []
